--- a/.github/workflows/update-profile.yml
+++ b/.github/workflows/update-profile.yml
@@ -14,11 +14,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout gh-pages branch
+      - name: Checkout main branch (for scripts)
+        uses: actions/checkout@v4
+        with:
+          ref: main
+          fetch-depth: 0
+
+      - name: Checkout gh-pages branch (for brand.html)
         uses: actions/checkout@v4
         with:
           ref: gh-pages
+          path: gh-pages-temp
           fetch-depth: 0
+
+      - name: Copy brand.html from gh-pages
+        run: |
+          mkdir -p . && cp gh-pages-temp/brand.html . 2>/dev/null || true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -35,8 +46,10 @@ jobs:
 
       - name: Commit and push changes to gh-pages
         run: |
+          cd gh-pages-temp
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          cp ../brand.html .
 
           if [[ -n $(git status -s) ]]; then
             git add brand.html
