Refactor code structure for improved readability and maintainability

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ npm-debug.log
 yarn-error.log
 
 # tmp
-warsztaty.html
+#warsztaty-darmowe.html
+warsztaty-płatne.html
 data/**
-backups/**
+backups
